--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,11 @@
 *{
     margin: 0px;
     padding: 0px;
+    box-sizing: inherit;
+    
 }
+
+
 /*estilos generales*/
 
 .clearfix{
@@ -20,6 +24,9 @@ body{
     color: white;
     font-family: sans-serif;
     background-color: black;
+    line-height: inherit;
+    
+    
 }
 #padre__grid{
     display: grid;
@@ -328,6 +335,11 @@ body{
     font-size: 2.5rem;
     text-align: center;
     margin: 25px;
+}
+.carousel-inner{
+    margin: 0px auto;
+    height: 500px;
+    width: 100%;
 }
 
 .img-coctel{
