--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -35,4 +35,52 @@
   color: #ccc;
   text-shadow: 1px 1px 5px black;
 }
+
+.staff__caja {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 50%;
+  height: auto;
+  margin-top: 60px;
+  text-align: center;
+}
+
+.staff__caja .staff__nosotros {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  margin: 50px 0px 50px 0px;
+}
+
+.staff__caja .staff__nosotros .name__staff {
+  color: white;
+  font-size: 1.5rem;
+  line-height: 250px;
+  text-align: center;
+  width: 150px;
+}
+
+.staff__caja .staff__nosotros .img-staff {
+  margin: 50px;
+  border: 1px solid white;
+}
+
+.staff__caja .staff__nosotros .img-staff img {
+  width: 150px;
+  height: 150px;
+  -webkit-transition: all 200ms;
+  transition: all 200ms;
+}
 /*# sourceMappingURL=estilos.css.map */
