--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ body{
     font-family: sans-serif;
     background-color: black;
     line-height: inherit;
+    outline: none;
 
     
 }
@@ -406,15 +407,7 @@ body{
 /*FIN DE PAGINA COCTELES*/
 
 /*INICIO DE PAGINA CONTACTO*/
-#contacto{
-    grid-area: 2 / 1 / 5 / 6;
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-
-}
-
+/*PAGINA CONTACTO EN SASS*/
 /*FIN DE PAGINA CONTACTO*/
 
 
